--- a/src/app/common/layout/layout.scss
+++ b/src/app/common/layout/layout.scss
@@ -13,6 +13,10 @@ m-body {
     margin-top: 51px;
   }
 
+  &.has-v3-navbar {
+    margin-top: 75px;
+  }
+
   &.is-pro-domain {
     margin-top: 0;
     padding-bottom: 0;
