--- a/src/app/modules/channels/channel.component.html
+++ b/src/app/modules/channels/channel.component.html
@@ -22,7 +22,7 @@
   ></div>
 </div>
 <div class="m-error-splash" *ngIf="error && !user">
-  <img [src]="cdnAssetsUrl + 'assets/logos/logo.svg'" />
+  <img [src]="minds.cdn_assets_url + 'assets/logos/logo.svg'" />
   <h3 class="mdl-color-text--red-300">{{ error }}</h3>
   <span
     class="mdl-color-text--blue-grey-300"
