--- a/src/app/modules/notifications/notifications.component.html
+++ b/src/app/modules/notifications/notifications.component.html
@@ -1,4 +1,4 @@
-<div class="mdl-tabs__tab-bar">
+<div class="mdl-tabs__tab-bar" *ngIf="showTabs">
   <a
     (click)="changeFilter('all')"
     class="mdl-tabs__tab"
@@ -118,14 +118,17 @@
 </div>
 <div
   class="mdl-grid notifications-grid"
+  [class.m-notificationsGrid__noScroll]="!showInfiniteScroll"
   #notificationGrid
   style="max-width:600px"
 >
   <div class="mdl-cell mdl-cell--12-col">
     <minds-notification
       *ngFor="let notification of notifications"
-      class="mdl-card mdl-shadow--2dp item"
+      class="mdl-card item"
+      [class.mdl-shadow--2dp]="showShadows"
       [notification]="notification"
+      [showElapsedTime]="showElapsedTime"
     ></minds-notification>
 
     <infinite-scroll
@@ -134,7 +137,7 @@
       [moreData]="moreData"
       [scrollSource]="useOwnScrollSource ? notificationGrid : null"
       [inProgress]="inProgress"
-      *ngIf="visible"
+      *ngIf="visible && showInfiniteScroll"
     >
     </infinite-scroll>
   </div>
