Modal overlay controls

--- a/src/app/common/components/overlay-modal/overlay-modal.component.scss
+++ b/src/app/common/components/overlay-modal/overlay-modal.component.scss
@@ -138,3 +138,13 @@
     background-color: rgba(themed($m-black-always), 0.5);
   }
 }
+
+.m-overlay-modal.m-overlayModal--media {
+  .m-overlay-modal--close {
+    .m-overlay-modal--escHint {
+      font-weight: 400;
+      display: block;
+      opacity: 0;
+    }
+  }
+}
