--- a/src/app/common/layout/v3-topbar/v3-topbar.component.scss
+++ b/src/app/common/layout/v3-topbar/v3-topbar.component.scss
@@ -47,6 +47,7 @@ m-v3topbar {
       display: flex;
       align-items: center;
       min-width: 0;
+      margin-right: 33.3%;
 
       & > * {
         padding-right: 15px;
@@ -371,9 +372,18 @@ m-v3topbar {
 .m-v3Topbar__userMenu {
   display: flex;
   align-items: center;
+  width: 100%;
+
+  @media screen and(min-width: $m-grid-max-tablet) {
+    margin-left: 55px;
+  }
+
+  @media screen and(min-width: $m-grid-max-mobile) {
+    margin-left: 27px;
+  }
 
   > * {
-    margin: 0 4px;
+    margin: 0 28px;
   }
 }
 
