Fix/2616 youtube pro bug

--- a/src/app/modules/legacy/components/cards/activity/activity.html
+++ b/src/app/modules/legacy/components/cards/activity/activity.html
@@ -222,7 +222,7 @@
       </span>
     </div>
     <minds-rich-embed
-      (mediaModalRequested)="openModal()"
+      (mediaModalRequested)="onRichEmbedClick($event)"
       [src]="activity"
       [maxheight]="480"
     >
