Hide remind button for comment media #2628

--- a/src/app/modules/media/modal/modal.component.html
+++ b/src/app/modules/media/modal/modal.component.html
@@ -310,6 +310,7 @@
                     (done)="wireSubmitted($event)"
                   ></m-wire-button>
                   <minds-button-remind
+                    *ngIf="originalEntity.type !== 'comment'"
                     [object]="originalEntity"
                   ></minds-button-remind>
                   <div>
