--- a/src/app/modules/auth/register.component.scss
+++ b/src/app/modules/auth/register.component.scss
@@ -7,10 +7,10 @@ m-register {
   position: relative;
   grid-area: content / span 2;
 
-  &.m-register__newDesign {
+  &.m-register--newDesign {
     margin-top: -52px;
 
-    &.m-register__newNavigation {
+    &.m-register--newNavigation {
       margin-top: -75px;
     }
 
@@ -280,7 +280,7 @@ m-register {
     }
   }
 
-  &:not(.m-register__newDesign) {
+  &:not(.m-register--newDesign) {
     .m-register--hero {
       position: relative;
 
