--- a/src/app/modules/search/search.component.scss
+++ b/src/app/modules/search/search.component.scss
@@ -147,7 +147,7 @@ m-search--bar-suggestions {
       border: 1px solid themed($m-grey-50);
     }
 
-    &.m-searchBar__newDesign {
+    &.m-searchBar--newDesign {
       padding: 27px 0;
 
       & > * {
