--- a/src/app/modules/wallet/v2/dashboard.component.html
+++ b/src/app/modules/wallet/v2/dashboard.component.html
@@ -1,4 +1,4 @@
-<m-pageLayout [menu]="menu">
+<m-pageLayout>
   <!-- <div class="m-walletDashboard" m-pageLayout__main *ngIf="currencies"> -->
   <div class="m-walletDashboard" m-pageLayout__main *ngIf="currencies">
     <m-dashboardLayout>
