--- a/src/app/modules/wallet/v2/dashboard.component.scss
+++ b/src/app/modules/wallet/v2/dashboard.component.scss
@@ -1,4 +1,9 @@
 m-walletDashboard {
+  @include m-theme() {
+    background-color: themed($m-bgColor--primary);
+  }
+  display: block;
+
   ////////////////////////////////////////////
   // COMMON //////////////////////////////////
   ////////////////////////////////////////////
