--- a/src/app/common/components/page-layout/page-layout.component.html
+++ b/src/app/common/components/page-layout/page-layout.component.html
@@ -1,4 +1,4 @@
-<m-sidebarMenu [menu]="menu"></m-sidebarMenu>
+<m-sidebarMenu [menu]="menu" *ngIf="menu"></m-sidebarMenu>
 <section class="m-pageLayout__main">
   <ng-content select="[m-pageLayout__main]"></ng-content>
 </section>
