add custom support bullet points to pro marketing and upgrade pgs

--- a/src/app/modules/upgrades/upgrade-options.component.html
+++ b/src/app/modules/upgrades/upgrade-options.component.html
@@ -127,6 +127,10 @@
         <li i18n>
           Professional media tools
         </li>
+
+        <li i18n>
+          Custom support
+        </li>
       </ul>
 
       <p>
