--- a/src/app/modules/pro/marketing.component.html
+++ b/src/app/modules/pro/marketing.component.html
@@ -128,6 +128,10 @@
             <li i18n>
               Track all of your analytics
             </li>
+
+            <li i18n>
+              Custom support from the Minds team
+            </li>
           </ul>
         </div>
         <div
