--- a/src/app/modules/wallet/v2/dashboard.component.scss
+++ b/src/app/modules/wallet/v2/dashboard.component.scss
@@ -196,11 +196,12 @@ m-walletDashboard {
   ////////////////////////////////////////////
   // VIEW TABS ///////////////////////////////
   ////////////////////////////////////////////
-  .m-walletDashboardViews__tabsContainer {
+  .m-tabs__container {
     box-sizing: border-box;
     display: flex;
     flex-flow: row nowrap;
     margin: 0 40px;
+    list-style: none;
     @include m-theme() {
       border-bottom: 1px solid themed($m-borderColor--tertiary);
     }
@@ -213,21 +214,23 @@ m-walletDashboard {
       margin-right: 0;
     }
   }
-  .m-walletDashboardViews__tab {
+  .m-tabs__tab > a {
     cursor: pointer;
     padding: 13px 20px;
-    margin: 0 13px;
+    margin-right: 0 26px;
     box-sizing: border-box;
+    display: block;
     font-size: 15px;
     font-weight: 300;
     line-height: 20px;
     transition: all 0.3s cubic-bezier(0.23, 1, 0.32, 1);
+    list-style: none;
 
     @include m-theme() {
       color: themed($m-textColor--tertiary);
       border-bottom: 3px solid themed($m-white);
     }
-    &.active {
+    &.selected {
       @include m-theme() {
         color: themed($m-textColor--primary);
         border-bottom: 3px solid themed($m-blue);
@@ -255,6 +258,7 @@ m-walletDashboard {
     @media screen and (max-width: $max-mobile) {
       min-height: 0px;
     }
+    padding: 40px;
   }
   .m-walletDashboardViews__view {
     display: block;
@@ -268,14 +272,14 @@ m-walletDashboard {
       margin: 30px 16px 0 16px;
     }
   }
-  m-walletChart {
-    .m-walletDashboardViews__view {
-      margin: 50px 0 0 0;
-    }
-    @media screen and (max-width: $min-tablet) {
-      margin: 30px 0 0 0;
-    }
-  }
+  // m-walletChart {
+  //   .m-walletDashboardViews__view {
+  //     margin: 50px 0 0 0;
+  //   }
+  //   @media screen and (max-width: $min-tablet) {
+  //     margin: 30px 0 0 0;
+  //   }
+  // }
 
   ////////////////////////////////////////////
   // BUTTON LAYOUTS //////////////////////////
